--- a/templates/alertmanager/alertmanager-dep.yaml
+++ b/templates/alertmanager/alertmanager-dep.yaml
@@ -98,7 +98,7 @@ spec:
             - name: storage
               mountPath: "/data"
         {{- end}}
-        - name: {{ .Chart.Name }}
+        - name: alertmanager
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
