rollback nginx container name
Signed-off-by: Dan Constantinescu <dconstantinescu@blackberry.com>

--- a/templates/nginx/nginx-dep.yaml
+++ b/templates/nginx/nginx-dep.yaml
@@ -44,7 +44,7 @@ spec:
       {{- end}}
       {{- end }}
       containers:
-        - name: cortex-gw
+        - name: nginx
           image: "{{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag }}"
           imagePullPolicy: {{ .Values.nginx.image.pullPolicy }}
           {{- if .Values.nginx.extraArgs }}
