replace if with scoped "with" statement
Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/templates/alertmanager/alertmanager-dep.yaml
+++ b/templates/alertmanager/alertmanager-dep.yaml
@@ -120,8 +120,8 @@ spec:
               mountPath: /etc/cortex-runtime-config
             - name: storage
               mountPath: "/data"
-              {{- if .Values.alertmanager.persistentVolume.subPath }}
-              subPath: {{ .Values.alertmanager.persistentVolume.subPath }}
+              {{- with .Values.alertmanager.persistentVolume.subPath }}
+              subPath: {{ . }}
               {{- end }}
           ports:
             - name: http-metrics
