--- a/values.yaml
+++ b/values.yaml
@@ -582,16 +582,16 @@ ingester:
             value: 1
             periodSeconds: 1800
 
-  lifecycle:
-    # -- The /shutdown preStop hook is recommended as part of the ingester
-    # scaledown process, but can be removed to optimize rolling restarts in
-    # instances that will never be scaled down or when using chunks storage
-    # with WAL disabled.
-    # https://cortexmetrics.io/docs/guides/ingesters-scaling-up-and-down/#scaling-down
-    preStop:
-      httpGet:
-        path: "/ingester/shutdown"
-        port: http-metrics
+  # -- The /shutdown preStop hook is recommended as part of the ingester
+  # scaledown process, but can be removed to optimize rolling restarts in
+  # instances that will never be scaled down or when using chunks storage
+  # with WAL disabled.
+  # https://cortexmetrics.io/docs/guides/ingesters-scaling-up-and-down/#scaling-down
+  lifecycle: {}
+    # preStop:
+    #   httpGet:
+    #     path: "/ingester/shutdown"
+    #     port: http-metrics
 
   ## DEPRECATED: use persistentVolume.subPath instead
   persistence:
