--- a/templates/querier/querier-dep.yaml
+++ b/templates/querier/querier-dep.yaml
@@ -90,6 +90,10 @@ spec:
             {{- if .Values.querier.env }}
               {{- toYaml .Values.querier.env | nindent 12 }}
             {{- end }}
+          {{- with .Values.querier.lifecycle }}
+          lifecycle:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
 {{- if .Values.querier.extraContainers }}
 {{ toYaml .Values.querier.extraContainers | indent 8}}
 {{- end }}
