--- a/templates/nginx/nginx-ingress.yaml
+++ b/templates/nginx/nginx-ingress.yaml
@@ -9,6 +9,9 @@ metadata:
   annotations:
     {{- toYaml .Values.ingress.annotations | nindent 4 }}
 spec:
+{{- if .Values.ingress.ingressClass.enabled }}
+  ingressClassName: {{ .Values.ingress.ingressClass.name }}
+{{- end }}
 {{- if .Values.ingress.tls }}
   tls:
   {{- range .Values.ingress.tls }}
