--- a/values.yaml
+++ b/values.yaml
@@ -22,6 +22,9 @@ tags:
 
 ingress:
   enabled: false
+  ingressClass:
+    enabled: true
+    name: "nginx"
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
