add autoscaler for nginx
Signed-off-by: Kevin Labesse <kevin@labesse.me>

--- a/ci/test-values.yaml
+++ b/ci/test-values.yaml
@@ -69,6 +69,8 @@ querier:
     enabled: true
 nginx:
   replicas: 1
+  autoscaling:
+    enabled: true
   config:
     httpSnippet: |-
       # http snippet
