--- a/templates/nginx/nginx-dep.yaml
+++ b/templates/nginx/nginx-dep.yaml
@@ -9,7 +9,9 @@ metadata:
   annotations:
     {{- toYaml .Values.nginx.annotations | nindent 4 }}
 spec:
+  {{- if not .Values.nginx.autoscaling.enabled }}
   replicas: {{ .Values.nginx.replicas }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "cortex.nginxSelectorLabels" . | nindent 6 }}
