--- a/templates/distributor/distributor-svc.yaml
+++ b/templates/distributor/distributor-svc.yaml
@@ -11,7 +11,7 @@ metadata:
   annotations:
     {{- toYaml .Values.distributor.service.annotations | nindent 4 }}
 spec:
-  type: ClusterIP
+  type: {{ .Values.distributor.service.type }}
   ports:
     - port: {{ .Values.config.server.http_listen_port }}
       protocol: TCP
