--- a/templates/ingester/ingester-statefulset.yaml
+++ b/templates/ingester/ingester-statefulset.yaml
@@ -64,10 +64,9 @@ spec:
       {{- if .Values.ingester.priorityClassName }}
       priorityClassName: {{ .Values.ingester.priorityClassName }}
       {{- end }}
-      {{- if .Values.ingester.securityContext.enabled }}
-      securityContext:
-        {{- omit .Values.ingester.securityContext "enabled" | toYaml | nindent 8 }}
-      {{- end }}
+      {{ - if .Values.ingester.securityContext.enabled }}
+      securityContext: {{ - omit .Values.ingester.securityContext "enabled" | toYaml | nindent 8 }}
+      {{ - end }}
       initContainers:
         {{- toYaml .Values.ingester.initContainers | nindent 8 }}
       {{- if .Values.image.pullSecrets }}
