--- a/templates/query-frontend/query-frontend-dep.yaml
+++ b/templates/query-frontend/query-frontend-dep.yaml
@@ -87,6 +87,10 @@ spec:
             {{- if .Values.query_frontend.env }}
               {{- toYaml .Values.query_frontend.env | nindent 12 }}
             {{- end }}
+          {{- with .Values.query_frontend.lifecycle }}
+          lifecycle:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
 {{- if .Values.query_frontend.extraContainers }}
 {{ toYaml .Values.query_frontend.extraContainers | indent 8}}
 {{- end }}
