- Fixed hardcoding of containerSecurityContext in Ingester statefulset (#258)
* - Fixed hardcoding of containerSecurityContext in Ingester statefulset
- Brought setting of containerSecurityContext for the Ingester statefulset inline with other components configuration

Signed-off-by: Ryan Woods <n4monitoring@node4.co.uk>

* Removed hard coding of ingester securityContext

Signed-off-by: Ryan Woods <n4monitoring@node4.co.uk>

* add containerSecurityContext back to ingester pod container

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

* fix securityContext for ingester sts

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

Co-authored-by: Ryan Woods <n4monitoring@node4.co.uk>
Co-authored-by: ShuzZzle <niclas.schad@gmail.com>

--- a/templates/ingester/ingester-statefulset.yaml
+++ b/templates/ingester/ingester-statefulset.yaml
@@ -65,8 +65,7 @@ spec:
       priorityClassName: {{ .Values.ingester.priorityClassName }}
       {{- end }}
       {{- if .Values.ingester.securityContext.enabled }}
-      securityContext:
-        {{- omit .Values.ingester.securityContext "enabled" | toYaml | nindent 8 }}
+      securityContext: {{- omit .Values.ingester.securityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
       initContainers:
         {{- toYaml .Values.ingester.initContainers | nindent 8 }}
@@ -151,8 +150,9 @@ spec:
             {{- toYaml .Values.ingester.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.ingester.resources | nindent 12 }}
-          securityContext:
-            readOnlyRootFilesystem: true
+          {{- if .Values.ingester.containerSecurityContext.enabled }}
+          securityContext: {{- omit .Values.ingester.containerSecurityContext "enabled" | toYaml | nindent 12 }}
+          {{- end }}
           env:
             {{- if .Values.ingester.env }}
               {{- toYaml .Values.ingester.env | nindent 12 }}
