--- a/templates/alertmanager/alertmanager-dep.yaml
+++ b/templates/alertmanager/alertmanager-dep.yaml
@@ -26,11 +26,11 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       annotations:
-{{- if .Values.useExternalConfig }}
+        {{- if .Values.useExternalConfig }}
         checksum/config: {{ .Values.externalConfigVersion }}
-{{- else }}
+        {{- else }}
         checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
-{{- end}}
+        {{- end }}
         {{- with .Values.alertmanager.podAnnotations }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -92,8 +92,9 @@ spec:
           {{- end }}
           resources:
             {{- toYaml .Values.alertmanager.sidecar.resources | nindent 12 }}
-          securityContext:
-            {{- toYaml .Values.alertmanager.sidecar.securityContext | nindent 12 }}
+          {{- if .Values.alertmanager.sidecar.containerSecurityContext.enabled }}
+          securityContext: {{- omit .Values.alertmanager.sidecar.containerSecurityContext "enabled" | toYaml | nindent 12 }}
+          {{- end }}
           volumeMounts:
             - name: storage
               mountPath: "/data"
@@ -145,9 +146,9 @@ spec:
           env:
             {{- toYaml .Values.alertmanager.env | nindent 12 }}
           {{- end }}
-      {{- if .Values.alertmanager.extraContainers }}
+        {{- if .Values.alertmanager.extraContainers }}
         {{ toYaml .Values.alertmanager.extraContainers | indent 8}}
-      {{- end }}
+        {{- end }}
       nodeSelector:
         {{- toYaml .Values.alertmanager.nodeSelector | nindent 8 }}
       affinity:
@@ -163,9 +164,9 @@ spec:
           {{- else }}
             secretName: {{ template "cortex.fullname" . }}
           {{- end }}
-      {{- if .Values.alertmanager.extraVolumes }}
+        {{- if .Values.alertmanager.extraVolumes }}
         {{ toYaml .Values.alertmanager.extraVolumes | indent 8}}
-      {{- end }}
+        {{- end }}
         - name: runtime-config
           configMap:
             name: {{ template "cortex.fullname" . }}-runtime-config
