--- a/values.yaml
+++ b/values.yaml
@@ -19,7 +19,7 @@ tags:
 ingress:
   enabled: false
   ingressClass:
-    enabled: true
+    enabled: false
     name: "nginx"
   annotations: {}
   hosts:
