--- a/templates/nginx/nginx-hpa.yaml
+++ b/templates/nginx/nginx-hpa.yaml
@@ -1,5 +1,5 @@
+{{- if and .Values.nginx.enabled .Values.nginx.autoscaling.enabled }}
 {{- with .Values.nginx.autoscaling -}}
-{{- if .enabled }}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
