Disable ingester liveness probes by default.
Based on cortex docs at
https://cortexmetrics.io/docs/guides/running-cortex-on-kubernetes/#take-extra-care-with-ingesters,
liveness probes for ingesters are not recommended: "We do not recommend
configuring a liveness probe on ingesters - killing them is a last resort and
should not be left to a machine."

Signed-off-by: Josh Carp <jm.carp@gmail.com>

--- a/templates/ingester/ingester-statefulset.yaml
+++ b/templates/ingester/ingester-statefulset.yaml
@@ -139,8 +139,10 @@ spec:
               protocol: TCP
           startupProbe:
             {{- toYaml .Values.ingester.startupProbe | nindent 12 }}
+          {{- if .Values.ingester.livenessProbe }}
           livenessProbe:
             {{- toYaml .Values.ingester.livenessProbe | nindent 12 }}
+          {{- end}}
           readinessProbe:
             {{- toYaml .Values.ingester.readinessProbe | nindent 12 }}
           resources:
