Optionally set service account per dep/statefulset.
Different cortex components might require different cloud provider
permissions. When using gke workload identity, pod iam permissions are
managed by kubernetes service account. This patch allows operators to
use different service accounts for each deployment or statefulset to
support fine-grained control of iam permissions in this scenario.

[Resolves #251]

Signed-off-by: Josh Carp <jm.carp@gmail.com>

--- a/templates/configs/configs-dep.yaml
+++ b/templates/configs/configs-dep.yaml
@@ -32,7 +32,7 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
-      serviceAccountName: {{ template "cortex.serviceAccountName" . }}
+      serviceAccountName: {{ .Values.configs.serviceAccount.name | default (include "cortex.serviceAccountName" . ) }}
     {{- if .Values.configs.priorityClassName }}
       priorityClassName: {{ .Values.configs.priorityClassName }}
     {{- end }}
