--- a/templates/configs/configs-dep.yaml
+++ b/templates/configs/configs-dep.yaml
@@ -49,7 +49,7 @@ spec:
       {{- end }}
       containers:
         - name: configs
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - "-target=configs"
@@ -67,7 +67,7 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /etc/cortex
-              subPath: {{ .Values.configs.persistence.subPath }}
+              subPath: {{ .Values.configs.persistentVolume.subPath }}
             - name: runtime-config
               mountPath: /etc/cortex-runtime-config
             {{- if .Values.configsdb_postgresql.enabled }}
@@ -95,10 +95,10 @@ spec:
           {{- if .Values.configs.containerSecurityContext.enabled }}
           securityContext: {{- omit .Values.configs.containerSecurityContext "enabled" | toYaml | nindent 12 }}
           {{- end }}
+          {{- if .Values.configs.env }}
           env:
-            {{- if .Values.configs.env }}
-              {{- toYaml .Values.configs.env | nindent 12 }}
-            {{- end }}
+            {{- toYaml .Values.configs.env | nindent 12 }}
+          {{- end }}
 {{- if .Values.configs.extraContainers }}
 {{ toYaml .Values.configs.extraContainers | indent 8}}
 {{- end }}
