--- a/renovate.json
+++ b/renovate.json
@@ -10,15 +10,14 @@
         "kd7lxl"
     ],
     "labels": ["dependencies"],
-    "regexManagers": [
-        {
-          "description": "Update cortex in Chart.yaml",
-          "fileMatch": ["^Chart\\.yaml$"],
-          "matchStrings": [
-            "appVersion: (?<currentValue>.*?)\\n",
-          ],
-          "depNameTemplate": "quay.io/cortexproject/cortex",
-          "datasourceTemplate": "docker"
+    "regexManagers": [{
+            "description": "Update cortex in Chart.yaml",
+            "fileMatch": ["^Chart\\.yaml$"],
+            "matchStrings": [
+                "appVersion: (?<currentValue>.*?)\\n",
+            ],
+            "depNameTemplate": "quay.io/cortexproject/cortex",
+            "datasourceTemplate": "docker"
         },
         {
             "description": "Update nginx image in README.md",
