--- a/ci/test-values.yaml
+++ b/ci/test-values.yaml
@@ -55,18 +55,51 @@ ingester:
     minReplicas: 1
   statefulSet:
     enabled: true
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
 distributor:
   replicas: 1
   autoscaling:
     enabled: true
     minReplicas: 1
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
 querier:
+  replicas: 1
   autoscaling:
     enabled: true
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
+query_frontend:
+  replicas: 1
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
 nginx:
   replicas: 1
   autoscaling:
     enabled: true
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
   config:
     httpSnippet: |-
       # http snippet
@@ -77,6 +110,25 @@ nginx:
 runtimeconfigmap:
   annotations:
     foo: bar
+alertmanager:
+  replicas: 1
+  statefulSet:
+    enabled: false
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
+ruler:
+  replicas: 1
+  enabled: true
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
 
 tags:
   blocks-storage-memcached: true
