--- a/templates/alertmanager/alertmanager-dep.yaml
+++ b/templates/alertmanager/alertmanager-dep.yaml
@@ -98,7 +98,7 @@ spec:
           volumeMounts:
             - name: storage
               mountPath: "/data"
-        {{- end}}
+        {{- end }}
         - name: alertmanager
           image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -113,7 +113,7 @@ spec:
           {{- end }}
           volumeMounts:
           {{- if .Values.alertmanager.extraVolumeMounts }}
-            {{ toYaml .Values.alertmanager.extraVolumeMounts | nindent 12}}
+          {{- toYaml .Values.alertmanager.extraVolumeMounts | nindent 12}}
           {{- end }}
             - name: config
               mountPath: /etc/cortex
@@ -147,7 +147,7 @@ spec:
             {{- toYaml .Values.alertmanager.env | nindent 12 }}
           {{- end }}
         {{- if .Values.alertmanager.extraContainers }}
-        {{ toYaml .Values.alertmanager.extraContainers | indent 8}}
+        {{- toYaml .Values.alertmanager.extraContainers | nindent 8}}
         {{- end }}
       nodeSelector:
         {{- toYaml .Values.alertmanager.nodeSelector | nindent 8 }}
@@ -164,13 +164,13 @@ spec:
           {{- else }}
             secretName: {{ template "cortex.fullname" . }}
           {{- end }}
-        {{- if .Values.alertmanager.extraVolumes }}
-        {{ toYaml .Values.alertmanager.extraVolumes | indent 8}}
-        {{- end }}
         - name: runtime-config
           configMap:
             name: {{ template "cortex.fullname" . }}-runtime-config
         - name: storage
           emptyDir: {}
+        {{- if .Values.alertmanager.extraVolumes }}
+        {{- toYaml .Values.alertmanager.extraVolumes | nindent 8 }}
+        {{- end }}
 {{- end -}}
 {{- end -}}
