--- a/templates/ingester/ingester-dep.yaml
+++ b/templates/ingester/ingester-dep.yaml
@@ -64,7 +64,7 @@ spec:
             {{- end }}
           volumeMounts:
             {{- if .Values.ingester.extraVolumeMounts }}
-            {{ toYaml .Values.ingester.extraVolumeMounts | nindent 12}}
+            {{- toYaml .Values.ingester.extraVolumeMounts | nindent 12}}
             {{- end }}
             - name: config
               mountPath: /etc/cortex
@@ -105,7 +105,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
         {{- with .Values.ingester.extraContainers }}
-        {{ toYaml . | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
       nodeSelector:
         {{- toYaml .Values.ingester.nodeSelector | nindent 8 }}
@@ -125,9 +125,9 @@ spec:
         - name: runtime-config
           configMap:
             name: {{ template "cortex.fullname" . }}-runtime-config
-        {{- if .Values.ingester.extraVolumes }}
-        {{ toYaml .Values.ingester.extraVolumes | nindent 8}}
-        {{- end }}
         - name: storage
           emptyDir: {}
+        {{- if .Values.ingester.extraVolumes }}
+        {{- toYaml .Values.ingester.extraVolumes | nindent 8}}
+        {{- end }}
 {{- end -}}
