--- a/templates/nginx/nginx-dep.yaml
+++ b/templates/nginx/nginx-dep.yaml
@@ -31,9 +31,9 @@ spec:
         {{- end }}
     spec:
       serviceAccountName: {{ template "cortex.serviceAccountName" . }}
-    {{- if .Values.nginx.priorityClassName }}
+      {{- if .Values.nginx.priorityClassName }}
       priorityClassName: {{ .Values.nginx.priorityClassName }}
-    {{- end }}
+      {{- end }}
       {{- if .Values.nginx.securityContext.enabled }}
       securityContext: {{- omit .Values.nginx.securityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
@@ -57,7 +57,7 @@ spec:
           {{- end }}
           volumeMounts:
             {{- if .Values.nginx.extraVolumeMounts }}
-              {{ toYaml .Values.nginx.extraVolumeMounts | nindent 12}}
+            {{- toYaml .Values.nginx.extraVolumeMounts | nindent 12}}
             {{- end }}
             - name: config
               mountPath: /etc/nginx
@@ -106,6 +106,6 @@ spec:
             secretName: {{ .Values.nginx.config.basicAuthSecretName }}
         {{- end }}
         {{- if .Values.nginx.extraVolumes }}
-        {{ toYaml .Values.nginx.extraVolumes | indent 8}}
+        {{- toYaml .Values.nginx.extraVolumes | nindent 8}}
         {{- end }}
 {{- end }}
