--- a/templates/store-gateway/store-gateway-statefulset.yaml
+++ b/templates/store-gateway/store-gateway-statefulset.yaml
@@ -95,7 +95,7 @@ spec:
           emptyDir: {}
         {{- end }}
         {{- if .Values.store_gateway.extraVolumes }}
-        {{ toYaml .Values.store_gateway.extraVolumes | nindent 8 }}
+        {{- toYaml .Values.store_gateway.extraVolumes | nindent 8 }}
         {{- end }}
       containers:
         {{- if .Values.store_gateway.extraContainers }}
@@ -113,7 +113,7 @@ spec:
             {{- end }}
           volumeMounts:
             {{- if .Values.store_gateway.extraVolumeMounts }}
-            {{ toYaml .Values.store_gateway.extraVolumeMounts | nindent 12}}
+            {{- toYaml .Values.store_gateway.extraVolumeMounts | nindent 12}}
             {{- end }}
             - name: config
               mountPath: /etc/cortex
