add ci values for both alertmanager/ingester deployment and sts variant
Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/ci/test-deployment-values.yml
+++ b/ci/test-deployment-values.yml
@@ -54,7 +54,15 @@ ingester:
     enabled: true
     minReplicas: 1
   statefulSet:
-    enabled: true
+    enabled: false
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
+compactor:
+  replicas: 1
   extraVolumes:
     - name: tmp-test
       emptyDir: {}
@@ -123,6 +131,14 @@ alertmanager:
 ruler:
   replicas: 1
   enabled: true
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
+store_gateway:
+  replicas: 1
   extraVolumes:
     - name: tmp-test
       emptyDir: {}
