improve .helmignore; fix naming convention of ci/; rebuild cortex 1.0.1
Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/.helmignore
+++ b/.helmignore
@@ -1,8 +1,29 @@
-.git
-.github
-cortex
-docs
-tools
+# Git
+.git/
+.gitignore
+.github/
+
+# IDE
+.project
+.idea/
+*.tmproj
+
+# Common backup files
+*.swp
+*.bak
+*.tmp
+*~
+
+# Cortex ignore
+docs/
+tools/
 ct.yaml
-ci
+ci/
 README.md.gotmpl
+.prettierignore
+CHANGELOG.md
+MAINTAINERS.md
+LICENSE
+Makefile
+renovate.json
+
