rework indentation for extraVolumes, extraVolumeMounts and extraContainers (#266)
* rework indentation for extraVolumes, extraVolumeMounts and extraContainers (replace ident with nindent and strip empty lines)

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/ci/test-deployment-values.yaml
+++ b/ci/test-deployment-values.yaml
@@ -54,19 +54,60 @@ ingester:
     enabled: true
     minReplicas: 1
   statefulSet:
-    enabled: true
+    enabled: false
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
+compactor:
+  replicas: 1
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
 distributor:
   replicas: 1
   autoscaling:
     enabled: true
     minReplicas: 1
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
 querier:
+  replicas: 1
   autoscaling:
     enabled: true
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
+query_frontend:
+  replicas: 1
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
 nginx:
   replicas: 1
   autoscaling:
     enabled: true
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
   config:
     httpSnippet: |-
       # http snippet
@@ -77,6 +118,33 @@ nginx:
 runtimeconfigmap:
   annotations:
     foo: bar
+alertmanager:
+  replicas: 1
+  statefulSet:
+    enabled: false
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
+ruler:
+  replicas: 1
+  enabled: true
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
+store_gateway:
+  replicas: 1
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
 
 tags:
   blocks-storage-memcached: true
